# IC_RAG

./: .gitignore  LLM_IC.py  MultiPurpuse_LLM.py  MultiPurpuse_LLM_intention.py  Set_Chapters_Ui.py  UI_app_v0.1.0.py  all_training.csv  chapter_classifier.py  classifier_data.csv  create_train_data_for_classification.ipynb  data_mining.csv  final_all_training.csv  first_test.py  fix_training_data.ipynb  generate_embedding_file.py  generate_embeddings_file_sections.py  generate_embeddings_from_csv.py  index_all_books.py  intent_classifier_data.csv  llama_index_create.py  llama_index_load.py  preprocess_data_mining.ipynb  preprocess_fundamentals.ipynb  pyproject.toml  readme.md  requirements.txt  test.py  testMultiSubUI.py  testOpenAI.py  testOpenAIUi.py  testUI.py  test_classifier.ipynb  test_data_mining.ipynb  test_openai.ipynb  test_pymupdf4llm.ipynb  teste.ipynb  testllamaIndex.ipynb
ic_chatbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
index/llama_index/: index_store.json
src/ic_chatbot/: __init__.py  main.py
